patched pom.xml to build mllib for spark